--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                         <a class="dropdown-item" href="#">Work for Us</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" active>
                     <a class="nav-link" href="/icoderbootstrap/contact.html">Contact Us</a>
                 </li>
             </ul>
